--- a/qwit.qrc
+++ b/qwit.qrc
@@ -33,6 +33,7 @@
         <file>images/uiopme.png</file>
         <file>images/unu.png</file>
         <file>images/murlkz.png</file>
+        <file>images/trim.png</file>
         <file>images/countries/br.png</file>
         <file>images/countries/cn.png</file>
         <file>images/countries/de.png</file>
