Added Polish translation, with some cleanup.
git-svn-id: http://qwit.googlecode.com/svn/trunk@283 067a171b-6953-0410-b330-3d32600bf046

--- a/qwit.qrc
+++ b/qwit.qrc
@@ -30,6 +30,7 @@
         <file>translations/qwit_en_US.qm</file>
         <file>translations/qwit_es_ES.qm</file>
         <file>translations/qwit_fi_FI.qm</file>
+        <file>translations/qwit_pl_PL.qm</file>
         <file>images/uiopme.png</file>
         <file>images/unu.png</file>
         <file>images/murlkz.png</file>
@@ -41,6 +42,7 @@
         <file>images/countries/fi.png</file>
         <file>images/countries/it.png</file>
         <file>images/countries/kz.png</file>
+        <file>images/countries/pl.png</file>
         <file>images/countries/ru.png</file>
         <file>images/countries/tr.png</file>
         <file>images/countries/us.png</file>
