Added j.mp url shortener
git-svn-id: http://qwit.googlecode.com/svn/trunk@286 067a171b-6953-0410-b330-3d32600bf046

--- a/qwit.qrc
+++ b/qwit.qrc
@@ -35,6 +35,7 @@
         <file>images/unu.png</file>
         <file>images/murlkz.png</file>
         <file>images/trim.png</file>
+        <file>images/jmp.png</file>
         <file>images/countries/br.png</file>
         <file>images/countries/cn.png</file>
         <file>images/countries/de.png</file>
