Added migre.me URL shortener, thanks to alg4net (issue 107)
git-svn-id: http://qwit.googlecode.com/svn/trunk@291 067a171b-6953-0410-b330-3d32600bf046

--- a/qwit.qrc
+++ b/qwit.qrc
@@ -36,6 +36,7 @@
         <file>images/murlkz.png</file>
         <file>images/trim.png</file>
         <file>images/jmp.png</file>
+        <file>images/migreme.png</file>
         <file>images/countries/br.png</file>
         <file>images/countries/cn.png</file>
         <file>images/countries/de.png</file>
