Added custom API logins for URL shorteners, by matthewh84 (issue 110)
git-svn-id: http://qwit.googlecode.com/svn/trunk@296 067a171b-6953-0410-b330-3d32600bf046

--- a/qwit.qrc
+++ b/qwit.qrc
@@ -49,5 +49,7 @@
         <file>images/countries/tr.png</file>
         <file>images/countries/us.png</file>
         <file>images/google.png</file>
+        <file>images/bitly.png</file>
+        <file>images/budurlcom.png</file>
     </qresource>
 </RCC>
