--- a/src/OptionsDialog.ui
+++ b/src/OptionsDialog.ui
@@ -69,7 +69,7 @@
           <number>-4</number>
          </property>
          <property name="currentIndex">
-          <number>0</number>
+          <number>3</number>
          </property>
          <widget class="QWidget" name="connectionPage">
           <layout class="QGridLayout" name="gridLayout_2">
@@ -181,7 +181,7 @@
               <item row="0" column="0">
                <widget class="QTabWidget" name="tabWidget">
                 <property name="currentIndex">
-                 <number>0</number>
+                 <number>1</number>
                 </property>
                 <widget class="QWidget" name="Tab_2">
                  <attribute name="title">
@@ -541,6 +541,13 @@
                       </property>
                       <property name="checked">
                        <bool>true</bool>
+                      </property>
+                     </widget>
+                    </item>
+                    <item>
+                     <widget class="QCheckBox" name="startMinimizedCheckBox">
+                      <property name="text">
+                       <string>Start minimized</string>
                       </property>
                      </widget>
                     </item>
