--- a/qwit.qrc
+++ b/qwit.qrc
@@ -31,6 +31,7 @@
         <file>translations/qwit_es_ES.qm</file>
         <file>translations/qwit_fi_FI.qm</file>
         <file>translations/qwit_pl_PL.qm</file>
+        <file>translations/qwit_ro_RO.qm</file>
         <file>images/uiopme.png</file>
         <file>images/unu.png</file>
         <file>images/murlkz.png</file>
@@ -48,6 +49,7 @@
         <file>images/countries/ru.png</file>
         <file>images/countries/tr.png</file>
         <file>images/countries/us.png</file>
+        <file>images/countries/ro.png</file>
         <file>images/google.png</file>
         <file>images/bitly.png</file>
         <file>images/budurlcom.png</file>
